# strava-oracle

./: .env.example  README.md  main.py  pyproject.toml
data/: 2022_06_01_Lauf_am_Morgen_9.csv  2022_06_04_Lauf_am_Morgen_8.csv  2022_06_06_Lauf_am_Morgen_7.csv  2022_06_11_Lauf_am_Morgen_6.csv  2023_05_01_Lauf_am_Morgen_4.csv  2023_07_03_Lauf_am_Morgen_3.csv  2023_08_02_Lauf_am_Morgen_2.csv  2023_08_05_Lauf_am_Morgen_1.csv  2024_09_29_HM_Ulm_2024.csv  2025_02_03_14428443112.csv  2025_02_05_14448553616.csv  2025_02_07_14468144119.csv  2025_02_08_14476750914.csv  2025_02_10_14496994014.csv  2025_02_13_14525726264.csv  2025_02_15_14543226459.csv  2025_06_09_Lauf_am_Morgen_5.csv  2025_09_03_Intervall_3x2km.csv  2025_09_08_Morning_run_17km.csv  2025_09_13_Saturday_Morning_Run.csv  2025_09_24_Intervall_4x1km.csv  2025_09_28_HM_Ulm_2025.csv  2025_11_05_Wednesday_Morning_Run_7km.csv  2025_11_17_Monday_Morning_Run_4km.csv
data/fit/: 14428443112.fit  14448553616.fit  14468144119.fit  14476750914.fit  14496994014.fit  14525726264.fit  14543226459.fit  HM_Ulm_2024.fit  HM_Ulm_2025.fit  Intervall_3x2km.fit  Intervall_4x1km.fit  Lauf_am_Morgen (1).fit  Lauf_am_Morgen (2).fit  Lauf_am_Morgen (3).fit  Lauf_am_Morgen (4).fit  Lauf_am_Morgen (5).fit  Lauf_am_Morgen (6).fit  Lauf_am_Morgen (7).fit  Lauf_am_Morgen (8).fit  Lauf_am_Morgen (9).fit  (+4 more)
figures/: fig_h3_heatmap.html
sql/: 00_setup.sql  01_spatial.sql  02_timeseries.sql  03_vector.sql  04_graph.sql  05_json.sql  06_relational.sql
src/: fit_to_csv.py  gen_freesql_embeds.py  generate_results.py  run_demos.py  visualize.py
