[project]
name = "strava-oracle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "branca>=0.8.2",
    "fitdecode>=0.11.0",
    "folium>=0.20.0",
    "h3>=4.4.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "selenium>=4.41.0",
]
